--- a/BookClub.Data/BookClub.Data.csproj
+++ b/BookClub.Data/BookClub.Data.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\202005101235139_post_id to PostReply.Designer.cs">
       <DependentUpon>202005101235139_post_id to PostReply.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005111444482_added firstname and lastname.cs" />
+    <Compile Include="Migrations\202005111444482_added firstname and lastname.Designer.cs">
+      <DependentUpon>202005111444482_added firstname and lastname.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
@@ -140,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005101235139_post_id to PostReply.resx">
       <DependentUpon>202005101235139_post_id to PostReply.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005111444482_added firstname and lastname.resx">
+      <DependentUpon>202005111444482_added firstname and lastname.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
