--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -325,6 +325,7 @@
     <Content Include="Views\Post\_postTable.cshtml" />
     <Content Include="Views\Profile\UploadFile.cshtml" />
     <Content Include="Views\Review\DeleteReview.cshtml" />
+    <Content Include="Views\Post\UpdatePost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
