Added edit function to PostReply

--- a/BookClub.Data/BookClub.Data.csproj
+++ b/BookClub.Data/BookClub.Data.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\202005111444482_added firstname and lastname.Designer.cs">
       <DependentUpon>202005111444482_added firstname and lastname.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005111957570_next.cs" />
+    <Compile Include="Migrations\202005111957570_next.Designer.cs">
+      <DependentUpon>202005111957570_next.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
@@ -112,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005111444482_added firstname and lastname.resx">
       <DependentUpon>202005111444482_added firstname and lastname.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005111957570_next.resx">
+      <DependentUpon>202005111957570_next.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
