--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -330,6 +330,7 @@
     <Content Include="Views\Post\UpdatePost.cshtml" />
     <Content Include="Views\UserAdmin\GetAllApplicationUsers.cshtml" />
     <Content Include="Views\Reply\UpdateReply.cshtml" />
+    <Content Include="Views\Admin\UpdateBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
