--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -331,6 +331,8 @@
     <Content Include="Views\UserAdmin\GetAllApplicationUsers.cshtml" />
     <Content Include="Views\Reply\UpdateReply.cshtml" />
     <Content Include="Views\Admin\UpdateBook.cshtml" />
+    <Content Include="Views\Admin\UpdateDiscussion.cshtml" />
+    <Content Include="Views\Admin\DeleteDiscussion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
