--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -333,6 +333,7 @@
     <Content Include="Views\Admin\DeleteDiscussion.cshtml" />
     <Content Include="Views\Admin\AddDiscussion.cshtml" />
     <Content Include="Views\Admin\DeleteBook.cshtml" />
+    <Content Include="Views\Review\UpdateReview.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
