Added pagination to GetAllBooks

--- a/BookClub/BookClub.csproj
+++ b/BookClub/BookClub.csproj
@@ -46,6 +46,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -234,6 +240,7 @@
     <Content Include="Content\images\home\community.jpg" />
     <Content Include="Content\images\home\members.jpg" />
     <Content Include="Content\images\home\stoneb.jpg" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Content\styles\custom.css" />
     <Content Include="Content\images\fonts\LibreBaskerville-Bold.ttf" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
